Amazon-EKS-Deep-Dive-2019/Creating-an-EKS-Cluster/cf.yaml
AWSTemplateFormatVersion: '2010-09-09'

Description:
  This template deploys a VPC, with a public subnet. It deploys an Internet 
  Gateway, with a default route on the public subnet. It deploys an EC2 instance 
  in the public subnet to serve as a bastion host.

Parameters:
  EnvironmentName:
    Description: An environment name that will be prefixed to resource names
    Type: String
    Default: Bastion

  VpcCIDR:
    Description: Please enter the IP range (CIDR notation) for this VPC
    Type: String
    AllowedPattern: '((\d{1,3})\.){3}\d{1,3}/\d{1,2}'
    Default: 10.192.0.0/16

  PublicSubnetCIDR:
    Description: Please enter the IP range (CIDR notation) for the public subnet in the first Availability Zone
    Type: String
    AllowedPattern: '((\d{1,3})\.){3}\d{1,3}/\d{1,2}'
    Default: 10.192.10.0/24

Resources:
  VPC:
    Type: AWS::EC2::VPC
    Properties:
      CidrBlock: !Ref VpcCIDR
      EnableDnsSupport: true
      EnableDnsHostnames: true
      Tags:
        - Key: Name
          Value: !Ref EnvironmentName

  InternetGateway:
    Type: AWS::EC2::InternetGateway
    Properties:
      Tags:
        - Key: Name
          Value: !Ref EnvironmentName

  InternetGatewayAttachment:
    Type: AWS::EC2::VPCGatewayAttachment
    Properties:
      InternetGatewayId: !Ref InternetGateway
      VpcId: !Ref VPC

  PublicSubnet:
    Type: AWS::EC2::Subnet
    Properties:
      VpcId: !Ref VPC
      AvailabilityZone: !Select [ 0, !GetAZs '' ]
      CidrBlock: !Ref PublicSubnetCIDR
      MapPublicIpOnLaunch: true
      Tags:
        - Key: Name
          Value: !Sub ${EnvironmentName} Public Subnet (AZ1)

  PublicRouteTable:
    Type: AWS::EC2::RouteTable
    Properties:
      VpcId: !Ref VPC
      Tags:
        - Key: Name
          Value: !Sub ${EnvironmentName} Public Routes

  DefaultPublicRoute:
    Type: AWS::EC2::Route
    DependsOn: InternetGatewayAttachment
    Properties:
      RouteTableId: !Ref PublicRouteTable
      DestinationCidrBlock: 0.0.0.0/0
      GatewayId: !Ref InternetGateway

  PublicSubnetRouteTableAssociation:
    Type: AWS::EC2::SubnetRouteTableAssociation
    Properties:
      RouteTableId: !Ref PublicRouteTable
      SubnetId: !Ref PublicSubnet
  
  NoIngressSecurityGroup:
    Type: AWS::EC2::SecurityGroup
    Properties:
      GroupName: "no-ingress-sg"
      GroupDescription: "Security group with no ingress rule"
      VpcId: !Ref VPC

  EC2Instance:
    Type: AWS::EC2::Instance
    Properties:
      ImageId: '%ami-43%'     
      InstanceType: t2.micro
      NetworkInterfaces:
        - AssociatePublicIpAddress: true
          DeviceIndex: '0'
          DeleteOnTermination: true
          SubnetId: !Ref PublicSubnet
          GroupSet:
            - !Ref InstanceSecurityGroup            
      UserData:
        Fn::Base64: |
          #!/bin/bash
          /bin/echo '%password%' | /bin/passwd cloud_user --stdin
          yum update -y
          yum install -y aws-cli
          curl --silent --location "https://github.com/weaveworks/eksctl/releases/download/latest_release/eksctl_linux_amd64.tar.gz" | tar xz -C /tmp
          mv /tmp/eksctl /usr/local/bin
          curl --silent -O "https://amazon-eks.s3-us-west-2.amazonaws.com/1.10.3/2018-07-26/bin/linux/amd64/kubectl"
          chmod +x ./kubectl
          mv ./kubectl /usr/local/bin
          curl --silent -O "https://amazon-eks.s3-us-west-2.amazonaws.com/1.10.3/2018-07-26/bin/linux/amd64/aws-iam-authenticator"
          chmod +x ./aws-iam-authenticator
          mv ./aws-iam-authenticator /usr/local/bin
      Tags:
        - Key: Name
          Value: Bastion Host

  InstanceSecurityGroup:
    Type: AWS::EC2::SecurityGroup
    Properties:
      GroupDescription: Enable SSH access via port 22
      VpcId: !Ref VPC
      SecurityGroupIngress:
      - IpProtocol: tcp
        FromPort: 22
        ToPort: 22
        CidrIp: 0.0.0.0/0

  AccessKey:
    Type: AWS::IAM::AccessKey
    Properties:
      UserName: cloud_user

Outputs:

  pubIpAddress1:
    Description: Public IP address of Bastion Host
    Value: !GetAtt EC2Instance.PublicIp

  pubIpAddress2:
    Description: cloud_user Access Key
    Value: !Ref AccessKey
  
  pubIpAddress3:
    Description: cloud_user Secret Access Key
    Value: !GetAtt AccessKey.SecretAccessKey

  # VPC:
  #   Description: A reference to the created VPC
  #   Value: !Ref VPC

  # PublicSubnets:
  #   Description: A list of the public subnets
  #   Value: !Join [ ",", [ !Ref PublicSubnet1, !Ref PublicSubnet2 ]]

  # PrivateSubnets:
  #   Description: A list of the private subnets
  #   Value: !Join [ ",", [ !Ref PrivateSubnet1, !Ref PrivateSubnet2 ]]

  # PublicSubnet1:
  #   Description: A reference to the public subnet in the 1st Availability Zone
  #   Value: !Ref PublicSubnet1

  # PublicSubnet2:
  #   Description: A reference to the public subnet in the 2nd Availability Zone
  #   Value: !Ref PublicSubnet2

  # PrivateSubnet1:
  #   Description: A reference to the private subnet in the 1st Availability Zone
  #   Value: !Ref PrivateSubnet1

  # PrivateSubnet2:
  #   Description: A reference to the private subnet in the 2nd Availability Zone
  #   Value: !Ref PrivateSubnet2

  # NoIngressSecurityGroup:
  #   Description: Security group with no ingress rule
  #   Value: !Ref NoIngressSecurityGroup
